<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:fontFamily="monospace"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/robotUuids"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <ListView
            android:id="@+id/robot_list"
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:layout_gravity="center_horizontal"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true">

        </ListView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/mode"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/robot_map"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button1" />

            <Button
                android:id="@+id/robot_map2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/robot_map3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button3" />

            <Button
                android:id="@+id/robot_map4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button4" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="276dp"
            android:text="TextView" />

        <Button
            android:id="@+id/robot_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>